--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkWave</title>
     <link rel="stylesheet" href="front/css/style.css">
     <link rel="stylesheet" href="front/css/menu.css">
@@ -20,26 +19,16 @@
         <aside class="sidebar">
             <nav class="side-nav">
                 <ul>
-                    <li><a href="#">홈페이지 소개</a></li>
-                    <li><a href="#">프로젝트 만들기</a></li>
-                    <li><a href="#">프로젝트 보기</a></li>
-                    <li><a href="#">신고</a></li>
+                    <li><a href="#" class="nav_btn">홈페이지 소개</a></li>
+                    <li><a href="#" class="nav_btn">프로젝트 만들기</a></li>
+                    <li><a href="#" class="nav_btn">프로젝트 보기</a></li>
+                    <li><a href="#" class="nav_btn">신고</a></li>
                 </ul>
             </nav>
             <div class="friends">
                 <button class="animated-button">
-                    <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
-                      ></path>
-                    </svg>
                     <span class="text">친구 초대하기</span>
                     <span class="circle"></span>
-                    <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
-                      ></path>
-                    </svg>
                   </button>
                 <ul class="friend-list">
                     <li>친구 1</li>
