--- a/front/login.html
+++ b/front/login.html
@@ -9,7 +9,7 @@
 <body>
     <form class="form">
         <p class="title">work_wave_로그인 </p>
-        <p class="message">회원가입을 통헤 work_wave 더 다양환 서비스를 이용해주세요</p>
+        <p class="message">회원가입을 통해 work_wave를 이용해주세요</p>
             <div class="flex">
             <label>
                 <input required="" placeholder="" type="text" class="input">
