--- a/front/sign_in.html
+++ b/front/sign_in.html
@@ -13,12 +13,7 @@
             <div class="flex">
             <label>
                 <input required="" placeholder="" type="text" class="input">
-                <span>Firstname</span>
-            </label>
-    
-            <label>
-                <input required="" placeholder="" type="text" class="input">
-                <span>Lastname</span>
+                <span>Id</span>
             </label>
         </div>  
                 
